--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 body{
     display: flex;
     width: 100%;
+    flex: 1;
 }
 
 .logo-and-header{
@@ -33,7 +34,7 @@ body{
 .odin-logo{
     display: block;
     font-family: Norse-bold;
-    font-size: 80px;
+    font-size: min(90px, 10%);
     color: white;
     top: 80px;
 }
@@ -42,6 +43,7 @@ body{
 .image-content{
     display: flex;
     justify-content: center;
+    flex: 1;
     
     height: 100vh;
     width: 40vw;
@@ -49,9 +51,7 @@ body{
     background-size: cover;
 }
 
-.image-content{
-    display: flex;
-}
+
 .form-content{
     height: 100vh;
     width: 60vw;
@@ -64,11 +64,11 @@ body{
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
+    flex: 1;
 
 }
 
 .secondblock{
-    
     background-color: white;
     height: 29.5%;
     margin-bottom: 0.5%;
@@ -87,4 +87,54 @@ p{
    font-size: larger;
    font-weight: 600;
    font-family: 'Times New Roman', Times, serif;
+}
+
+.button{
+    margin: 45px 45px 0px 45px;
+    width: 200px;
+    height: 45px;
+    border-radius: 8px;
+    border: none;
+    background-color: #596D48;
+    color: white;
+    font-size: medium;
+    font-weight: 600;
+    box-shadow: 5px 5px 10px rgb(199, 199, 199);
+}
+
+a{
+    text-decoration: none;
+    color: #596D48;
+}
+
+.forminput{
+   display: flex;
+    margin-left: 45px;
+    gap: 30px;
+    margin-top: 20px;
+    flex: 1;
+}
+
+input,label{
+    display: block;
+}
+
+.letsdothis{
+    margin: 0 0 0 40px;
+}
+
+.form{
+display: flex;
+flex-direction: column;
+flex: 1;
+}
+
+.inputbox{
+    display: block;
+    gap: 10px;
+    flex-direction: row;
+}
+
+input:focus{
+    outline: 1px solid red;
 }
